import org.wpilib.toolchain.*

plugins {
    id 'cpp'
    id 'java'
    id 'google-test'
    id 'org.wpilib.WPILibRepositoriesPlugin' version '2027.0.0'
    id 'org.wpilib.NativeUtils' version '2027.10.0'
    id 'org.wpilib.GradleJni' version '2027.0.0'
    id 'org.wpilib.GradleVsCode' version '2027.0.0'
    id 'com.diffplug.spotless' version '8.4.0'
}

// WPILib Version
ext.wpilibVersion = "2027.+"

repositories {
    mavenCentral()
}
wpilibRepositories.use2027Repos()
if (project.hasProperty('releaseMode')) {
    wpilibRepositories.addAllReleaseRepositories(project)
} else {
    wpilibRepositories.addAllDevelopmentRepositories(project)
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}
var javaVersion = "25"

// Apply C++ configuration
apply from: 'config.gradle'

// Apply Java configuration
dependencies {
    implementation "org.wpilib.ntcore:ntcore-java:$wpilibVersion"
    implementation "org.wpilib.wpilibj:wpilibj-java:$wpilibVersion"
    implementation "org.wpilib.wpiutil:wpiutil-java:$wpilibVersion"
    implementation "org.wpilib.wpimath:wpimath-java:$wpilibVersion"
    implementation "org.wpilib.wpiunits:wpiunits-java:$wpilibVersion"
    implementation "org.wpilib.hal:hal-java:$wpilibVersion"
    implementation "org.wpilib:commands3-java:$wpilibVersion"

    // This is needed to use wpilibj Filesystem class
    testImplementation "org.wpilib.cscore:cscore-java:$wpilibVersion"
    testImplementation "org.wpilib.cameraserver:cameraserver-java:$wpilibVersion"

    implementation "com.fasterxml.jackson.core:jackson-annotations:2.19.2"
    implementation "com.fasterxml.jackson.core:jackson-core:2.19.2"
    implementation "com.fasterxml.jackson.core:jackson-databind:2.19.2"

    implementation "com.google.code.gson:gson:2.13.1"

    testImplementation 'us.hebi.quickbuf:quickbuf-runtime:1.4'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.13.4'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.13.4'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.13.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Set up java tests
test {
    useJUnitPlatform()
    systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
    testLogging {
        events "failed"
        exceptionFormat = "full"
    }
}

if (project.hasProperty('onlylinuxarm64') || project.hasProperty('onlywindowsarm64') || project.hasProperty('onlylinuxsystemcore')) {
    test.enabled = false
}

tasks.withType(JavaCompile) {
    options.compilerArgs.add '-XDstringConcat=inline'
    options.encoding = 'UTF-8'
}

// Setup Javadocs to link back to WPILib docs
javadoc {
    options {
        links "https://docs.oracle.com/en/java/javase/$javaVersion/docs/api/", "https://github.wpilib.org/allwpilib/docs/release/java/"
        addBooleanOption("Xdoclint:html,missing,reference,syntax", true)
        addBooleanOption('html5', true)
        addStringOption("charset", "utf-8")
        addStringOption("docencoding", "utf-8")
        addStringOption("encoding", "utf-8")
        linkSource(true)
        failOnError = true

        title = "ChoreoLib API"

        // Treat javadoc warnings as errors.
        //
        // The second argument '-quiet' is a hack. The one parameter
        // addStringOption() doesn't work, so we add '-quiet', which is added
        // anyway by gradle. See https://github.com/gradle/gradle/issues/2354.
        options.addStringOption('Werror', '-quiet')
    }
}

// Set up exports properly
nativeUtils {
    exportsConfigs {
        // Main library is just default empty. This will export everything
        ChoreoLib {
        }
    }
}

ext.getCurrentArch = {
    return NativePlatforms.desktop
}

def systemArch = getCurrentArch()

model {
    components {
        ChoreoLib(NativeLibrarySpec) {
            sources {
                cpp {
                    source {
                        srcDirs 'src/main/native/cpp'
                        include '**/*.cpp'
                    }
                    exportedHeaders {
                        srcDirs 'src/main/native/include'
                    }
                }
            }
            nativeUtils.useRequiredLibrary(it, 'wpilib_shared')
        }
    }
    testSuites {
        ChoreoLibTest {
            sources.cpp {
                source {
                    srcDir 'src/test/native/cpp'
                    include '**/*.cpp'
                }
            }

            binaries.all {
                def arch = it.targetPlatform.name
                if (systemArch == arch && it.buildType.name == 'debug') {
                    def filePath = it.tasks.install.installDirectory.get().toString() + File.separatorChar + 'lib'
                    test.dependsOn it.tasks.install
                    test.systemProperty 'java.library.path', filePath
                    test.environment 'LD_LIBRARY_PATH', filePath
                    test.workingDir filePath
                }
            }

            nativeUtils.useRequiredLibrary(it, "wpilib_shared", "googletest_static")
        }
    }
}

spotless {
    java {
        target fileTree('.') {
            include '**/*.java'
            exclude '**/build/**', '**/build-*/**'
        }
        toggleOffOn()
        googleJavaFormat()
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
    groovyGradle {
        target fileTree('.') {
            include '**/*.gradle'
            exclude '**/build/**', '**/build-*/**'
        }
        greclipse()
        leadingTabsToSpaces(4)
        trimTrailingWhitespace()
        endWithNewline()
    }
    format 'misc', {
        target fileTree('.') {
            include '**/*.md', '**/.gitignore'
            exclude '**/build/**', '**/build-*/**'
        }
        trimTrailingWhitespace()
        leadingTabsToSpaces(4)
        endWithNewline()
    }
}

test {
    dependsOn cleanTest

    useJUnitPlatform()
    testLogging.showStandardStreams = true

    // For reflective access to continuation classes in unit tests
    jvmArgs += [
        "--add-opens",
        "java.base/jdk.internal.vm=ALL-UNNAMED",
        "--add-opens",
        "java.base/java.lang=ALL-UNNAMED",
    ]
}

apply from: 'publish.gradle'

wrapper {
    gradleVersion = '9.4.1'
}
